--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,12 +12,15 @@ jobs:
     strategy:
       matrix:
         os: ['ubuntu-latest', 'macos-latest', 'windows-latest']
-        python-version: [ '3.7', '3.8', '3.9', '3.10', 'pypy-3.7']
-        exclude:
+        python-version: ['3.7', '3.10']
+        include:
           - os: "windows-latest"
-            python-version: "pypy-3.7"
-          - os: "macos-latest"
             python-version: "3.8"
+          - os: "macos-latest"
+            python-version: "3.9"
+          - os: "ubuntu-latest"
+            python-version: "pypy-3.8"
+      fail-fast: false
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
