fix py10 warnings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,4 +18,5 @@ filterwarnings = [
     # From jupyter_client
     "ignore:unclosed <socket.socket:ResourceWarning",
     "ignore:unclosed event loop:ResourceWarning",
+    "DeprecationWarning: There is no current event loop",
 ]
