--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,5 +18,5 @@ filterwarnings = [
     # From jupyter_client
     "ignore:unclosed <socket.socket:ResourceWarning",
     "ignore:unclosed event loop:ResourceWarning",
-    "DeprecationWarning: There is no current event loop",
+    "ignore:There is no current event loop:DeprecationWarning",
 ]
