--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,6 +5,8 @@ include .mailmap
 include MANIFEST.in
 include nbconvert/templates/skeleton/Makefile
 include nbconvert/tests/README.md
+include pyproject.toml
+include setup.py
 
 # Documentation
 graft docs
