--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,42 +5,42 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.1.0
     hooks:
-  #     - id: end-of-file-fixer
-  #     - id: check-case-conflict
-  #     - id: check-executables-have-shebangs
-  #     - id: requirements-txt-fixer
+      - id: end-of-file-fixer
+      - id: check-case-conflict
+      - id: check-executables-have-shebangs
+      - id: requirements-txt-fixer
       - id: check-added-large-files
-  #     - id: check-case-conflict
-  #     - id: check-toml
-  #     - id: check-yaml
-  #     - id: debug-statements
-  #     - id: forbid-new-submodules
-  #     - id: check-builtin-literals
-  #     - id: trailing-whitespace
+      - id: check-case-conflict
+      - id: check-toml
+      - id: check-yaml
+      - id: debug-statements
+      - id: forbid-new-submodules
+      - id: check-builtin-literals
+      - id: trailing-whitespace
 
-  # - repo: https://github.com/psf/black
-  #   rev: 22.3.0
-  #   hooks:
-  #     - id: black
-  #       args: ["--line-length", "100"]
+  - repo: https://github.com/psf/black
+    rev: 22.3.0
+    hooks:
+      - id: black
+        args: ["--line-length", "100"]
 
-  # - repo: https://github.com/PyCQA/isort
-  #   rev: 5.10.1
-  #   hooks:
-  #     - id: isort
-  #       files: \.py$
-  #       args: [--profile=black]
+  - repo: https://github.com/PyCQA/isort
+    rev: 5.10.1
+    hooks:
+      - id: isort
+        files: \.py$
+        args: [--profile=black]
 
-  # - repo: https://github.com/pre-commit/mirrors-prettier
-  #   rev: v2.6.1
-  #   hooks:
-  #     - id: prettier
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v2.6.1
+    hooks:
+      - id: prettier
 
-  # - repo: https://github.com/asottile/pyupgrade
-  #   rev: v2.31.1
-  #   hooks:
-  #     - id: pyupgrade
-  #       args: [--py37-plus]
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v2.31.1
+    hooks:
+      - id: pyupgrade
+        args: [--py37-plus]
 
   - repo: https://github.com/PyCQA/doc8
     rev: 0.11.0
