add flake8 and git-blame-ignore-revs

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,33 +10,24 @@ ignore =
     .circleci/*
 
 [flake8]
-ignore = E121, # continuation line under-indented for hanging indent
-         E123, # closing bracket does not match indentation of opening bracket's line
-         E124, # closing bracket does not match visual indentation
-         E126, # continuation line over-indented for hanging indent
-         E127, # continuation line over-indented for visual indent
-         E128, # continuation line under-indented for visual indent
-         E201, # whitespace after '{'
-         E202, # whitespace before '}'
-         E203, # whitespace before ':'
-         E221, # multiple spaces before operator
-         E222, # multiple spaces after operator
-         E225, # missing whitespace around operator
-         E226, # missing whitespace around arithmetic operator
-         E231, # missing whitespace after ','
-         E241, # multiple spaces after '
-         E251, # unexpected spaces around keyword / parameter equals
-         E261, # at least two spaces before inline comment
-         E265, # block comment should start with '# '
-         E301, # expected 1 blank line, found 0
-         E302, # expected 2 blank lines, found 1
-         E303, # too many blank lines (2)
-         E305, # expected 2 blank lines after class or function definition, found 1
-         E306, # expected 1 blank line before a nested definition, found 0
-         E501, # line too long (90 > 79 characters)
-         F403, # 'from ... import *' used; unable to detect undefined names
-         W291, # trailing whitespace
-         W293, # blank line contains whitespace
-         W391, # blank line at end of file
-         W503, # line break before binary operator
-         W504, # line break after binary operator
+ignore = E501, W503, E402
+builtins = c, get_config
+exclude =
+    .cache,
+    .github,
+    docs,
+    setup.py
+enable-extensions = G
+extend-ignore =
+    G001, G002, G004, G200, G201, G202,
+    # black adds spaces around ':'
+    E203,
+per-file-ignores =
+    # B011: Do not call assert False since python -O removes these calls
+    # F841 local variable 'foo' is assigned to but never used
+    nbconvert/*/tests/*: B011, F841,
+    nbconvert/tests/*: B011, F841,
+    # F401 'foo' imported but unused
+    # F403 'x' used; unable to detect undefined names
+    nbconvert/*/__init__.py: F401, F403
+    nbconvert/__init__.py: F401, F403
