clean up workflows update deps
update deps

fix docs build

fix docs build

remove pytest pin

update manifest

clean up docs

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -21,7 +21,7 @@ exclude .prettierignore
 graft examples
 
 # docs subdirs we want to skip
-prune docs/build
+prune docs/_build
 prune docs/gh-pages
 prune docs/dist
 
