--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,3 @@
-ci:
-  skip: [check-jsonschema]
-
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.1.0
@@ -30,6 +27,7 @@ repos:
       - id: isort
         files: \.py$
         args: [--profile=black]
+        stages: [manual]
 
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v2.6.2
@@ -47,6 +45,7 @@ repos:
     hooks:
       - id: doc8
         args: [--max-line-length=200]
+        stages: [manual]
 
   - repo: https://github.com/pycqa/flake8
     rev: 4.0.1
@@ -58,6 +57,7 @@ repos:
             "flake8-logging-format==0.6.0",
             "flake8-implicit-str-concat==0.2.0",
           ]
+        stages: [manual]
 
   - repo: https://github.com/sirosen/check-jsonschema
     rev: 0.14.2
@@ -67,3 +67,4 @@ repos:
         files: ^\.github/workflows/
         types: [yaml]
         args: ["--schemafile", "https://json.schemastore.org/github-workflow"]
+        stages: [manual]
