--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,7 +93,7 @@ jupyter-dejavu = "nbconvert.nbconvertapp:dejavu_main"
 [tool.hatch.version]
 path = "nbconvert/_version.py"
 
-[tool.hatch.build]
+[tool.hatch.build.targets.sdist]
 artifacts = ["share/templates/lab/static/*.*"]
 
 [tool.hatch.build.targets.wheel.shared-data]
