switch from entrypoints to importlib-metadata
entrypoints is deprecated and recommends switching to importlib-metadata. I've implemented this because I'm using a custom import mechanism that works with the documented importlib.metadata interface but not with entrypoints' custom logic

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ dependencies = [
     "beautifulsoup4",
     "bleach",
     "defusedxml",
-    "entrypoints>=0.2.2",
+    "importlib-metadata;python_version<3.8",
     "jinja2>=3.0",
     "jupyter_core>=4.7",
     "jupyterlab_pygments",
