--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -50,7 +50,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install texlive-plain-generic inkscape texlive-xetex
-
+          sudo apt-get install xvfb x11-utils libxkbcommon-x11-0
       - name: Install package dependencies
         shell: bash -l {0}
         run: |
@@ -68,7 +68,7 @@ jobs:
           pip check
 
       - name: Run tests with coverage
-        if: ${{ !startsWith(matrix.python-version, 'pypy') && !startsWith(runner.os, 'Windows')  }}
+        if: ${{ startsWith(runner.os, 'macos')  }}
         shell: bash -l {0}
         run: |
           conda activate nbconvert
@@ -77,7 +77,17 @@ jobs:
           python -m pytest --cov nbconvert -vv
 
       - name: Run tests on pypy and Windows
-        if: ${{ startsWith(matrix.python-version, 'pypy') || startsWith(runner.os, 'Windows')  }}
+        if: ${{ startsWith(runner.os, 'linux') }}
+        shell: bash -l {0}
+        run: |
+          conda activate nbconvert
+          # See https://github.com/pyppeteer/pyppeteer/pull/321
+          pip install -U websockets
+          #python -m pytest -vv
+          xvfb-run --auto-servernum `which coverage` run -m pytest -vv
+
+      - name: Run tests on pypy and Windows
+        if: ${{ startsWith(runner.os, 'Windows') }}
         shell: bash -l {0}
         run: |
           conda activate nbconvert
