--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,56 +22,84 @@ jobs:
           - os: "macos-latest"
             python-version: "3.9"
           - os: "ubuntu-latest"
-            python-version: "pypy-3.8"
+            python-version: "3.10"
       fail-fast: false
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
       - name: Run base setup actions
         uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
-
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+          mamba-version: "*"
+          channels: conda-forge
+      - name: Install conda-forge python
+        shell: bash -l {0}
+        run: |
+          mamba create -n nbconvert
+          conda activate nbconvert
+          mamba install python=${{ matrix.python-version }}
+      - name: Install conda-forge dependencies
+        shell: bash -l {0}
+        run: |
+          mamba create -n nbconvert
+          conda activate nbconvert
+          mamba install pip pyqtwebengine pandoc pyxdg
       - name: Install Linux dependencies
         if: startsWith(runner.os, 'Linux')
         run: |
           sudo apt-get update
           sudo apt-get install texlive-plain-generic inkscape texlive-xetex
           sudo apt-get install xvfb x11-utils libxkbcommon-x11-0
-
-          # pandoc is not up to date in the ubuntu repos, so we install directly
-          wget https://github.com/jgm/pandoc/releases/download/2.17.1.1/pandoc-2.17.1.1-1-amd64.deb && sudo dpkg -i pandoc-2.17.1.1-1-amd64.deb
-
       - name: Install package dependencies
-        shell: bash
+        shell: bash -l {0}
         run: |
-          pip install codecov --user
-          pip install -e ".[execute,serve,test,qtpdf,qtpng]" --user
-          python -m ipykernel.kernelspec --user
-          # many things installed in --users need this to be in $PATH
-          echo "/Users/runner/.local/bin" >> $GITHUB_PATH
+          conda activate nbconvert
+          pip install codecov
+          pip install -e ".[execute,serve,test]"
+          which python
+          python -m ipykernel.kernelspec --sys-prefix
 
       - name: List installed packages
+        shell: bash -l {0}
         run: |
+          conda activate nbconvert
           pip freeze
           pip check
 
       - name: Run tests with coverage
-        if: ${{ !startsWith(matrix.python-version, 'pypy') && !startsWith(runner.os, 'Windows')  }}
-        shell: bash
+        if: ${{ startsWith(runner.os, 'macos')  }}
+        shell: bash -l {0}
         run: |
+          conda activate nbconvert
           # See https://github.com/pyppeteer/pyppeteer/pull/321
-          pip install -U websockets --user
+          pip install -U websockets
           python -m pytest --cov nbconvert -vv
 
       - name: Run tests on pypy and Windows
-        if: ${{ startsWith(matrix.python-version, 'pypy') || startsWith(runner.os, 'Windows')  }}
-        shell: bash
+        if: ${{ startsWith(runner.os, 'linux') }}
+        shell: bash -l {0}
         run: |
+          conda activate nbconvert
           # See https://github.com/pyppeteer/pyppeteer/pull/321
-          pip install -U websockets --user
+          pip install -U websockets
+          #python -m pytest -vv
+          xvfb-run --auto-servernum `which coverage` run -m pytest -vv
+
+      - name: Run tests on pypy and Windows
+        if: ${{ startsWith(runner.os, 'Windows') }}
+        shell: bash -l {0}
+        run: |
+          conda activate nbconvert
+          # See https://github.com/pyppeteer/pyppeteer/pull/321
+          pip install -U websockets
           python -m pytest -vv
 
       - name: Code coverage
-        run: codecov
+        shell: bash -l {0}
+        run: |
+          conda activate nbconvert
+          codecov
 
   # Run "pre-commit run --all-files --hook-stage=manual"
   pre-commit:
