Remove downloaded CSS from repository

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ docs/source/config_options.rst
 share/jupyter/nbconvert/templates/lab/static/index.css
 share/jupyter/nbconvert/templates/lab/static/theme-dark.css
 share/jupyter/nbconvert/templates/lab/static/theme-light.css
+share/jupyter/nbconvert/templates/classic/static/style.css
