--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ docs/source/config_options.rst
 share/templates/lab/static/index.css
 share/templates/lab/static/theme-dark.css
 share/templates/lab/static/theme-light.css
+share/templates/classic/static/style.css
