--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ docs/source/config/options
 docs/source/interactive/magics-generated.txt
 docs/gh-pages
 nbconvert/resources/style.min.css
+nbconvert/tests/files/*.html
 *.py[co]
 __pycache__
 *.egg-info
