--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -156,6 +156,7 @@ jobs:
           pip check
       - name: Run the tests
         run: |
+          export NBFORMAT_VALIDATOR=jsonschema
           pytest -vv -W default || pytest -vv -W default --lf
 
   make_sdist:
