test with nbclient 0.7

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -157,7 +157,7 @@ jobs:
       - name: Run the tests
         run: |
           pip install jupyter_client@https://github.com/blink1073/jupyter_client/archive/refs/heads/synchronous_managers.zip
-          pip install nbclient@https://github.com/blink1073/nbclient/archive/refs/heads/client-8-handling.zip
+          pip install nbclient==0.7.0
           pytest -vv || pytest -vv --lf
 
   make_sdist:
