--- a/pyproject.toml
+++ b/pyproject.toml
@@ -135,3 +135,28 @@ filterwarnings = [
     "ignore:unclosed event loop:ResourceWarning",
     "ignore:There is no current event loop:DeprecationWarning",
 ]
+
+[tool.flake8]
+ignore = "E501, W503, E402"
+builtins = "c, get_config"
+exclude = [
+    ".cache",
+    ".github",
+    "docs",
+]
+enable-extensions = "G"
+extend-ignore = [
+    "G001", "G002", "G004", "G200", "G201", "G202",
+    # black adds spaces around ':'
+    "E203",
+]
+per-file-ignores = [
+    # B011: Do not call assert False since python -O removes these calls
+    # F841 local variable 'foo' is assigned to but never used
+    "nbconvert/*/tests/*: B011", "F841",
+    "nbconvert/tests/*: B011", "F841",
+    # F401 'foo' imported but unused
+    # F403 'x' used; unable to detect undefined names
+    "nbconvert/*/__init__.py: F401", "F403",
+    "nbconvert/__init__.py: F401", "F403",
+]
