--- a/pyproject.toml
+++ b/pyproject.toml
@@ -151,6 +151,9 @@ filterwarnings = [
     "ignore:getargs.*format is deprecated:DeprecationWarning",
     # From jupyter_client
     "ignore:unclosed <socket.socket:ResourceWarning",
+    "ignore:There is no current event loop:DeprecationWarning",
+    "ignore:unclosed event loop:ResourceWarning",
+    # From jupyter_core
     "module:Jupyter is migrating its paths to use standard platformdirs:DeprecationWarning",
 ]
 
