--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -36,7 +36,7 @@ jobs:
         if: startsWith(runner.os, 'Linux')
         run: |
           sudo apt-get update
-          sudo apt-get install texlive-plain-generic inkscape texlive-xetex
+          sudo apt-get install texlive-plain-generic inkscape texlive-xetex latexmk
           sudo apt-get install xvfb x11-utils libxkbcommon-x11-0
 
           # pandoc is not up to date in the ubuntu repos, so we install directly
