--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,7 @@ asciidoc = "nbconvert.exporters:ASCIIDocExporter"
 script = "nbconvert.exporters:ScriptExporter"
 
 [project.optional-dependencies]
-qtpng = ["pyqtwebengine>=5.15, PyQt5>=5.15"]
+qtpng = ["pyqtwebengine>=5.15", "PyQt5>=5.15"]
 qtpdf = ["nbconvert[qtpng]"]
 webpdf = ["pyppeteer>=1,<1.1"]
 test = [
