--- a/pyproject.toml
+++ b/pyproject.toml
@@ -116,7 +116,7 @@ dependencies = ["coverage", "pytest-cov"]
 [tool.hatch.envs.cov.scripts]
 #test = "python -m pytest -vv --cov nbconvert --cov-branch --cov-report term-missing:skip-covered {args}"
 #nowarn = "test -W default {args}"
-test = "python -c \"from import nbconvert.exporters import qt_screenshot\""
+test = "python -c \"from nbconvert.exporters import qt_screenshot\""
 
 [tool.pytest.ini_options]
 markers = "network: marks tests which require network connection"
